--- a/src/main/webapp/view/main.html
+++ b/src/main/webapp/view/main.html
@@ -1,25 +1,48 @@
 <div>
 	<h4 class="text-center">Je recherche :</h4>
-	<div class="text-center"><input ng-model="sexe" type="radio" name="radioSex" value="M"
-		checked="checked">&nbsp;Un Geek <br> <input
-		ng-model="sexe" type="radio" name="radioSex" value="F">&nbsp;Une
-	Geeke <br></div>
+	<div class="text-center">
+		<input id="geek-radioM" ng-model="sexe" type="radio" name="radioSex" value="M"
+			checked="checked"><label for="geek-radioM">&nbsp;Un Geek </label><br> <input
+			id="geek-radioF" ng-model="sexe" type="radio" name="radioSex" value="F"><label for="geek-radioF">&nbsp;Une
+		Geeke </label><br>
+	</div>
 
 	<h4 class="text-center">qui apprecie...</h4>
-	<div class="text-center"><select style="margin-top: 10px;" ng-model="interet"
-		placeholder="selction"
-		ng-options="interet.unInteret for interet in interets">
-	</select></div>
+	<div class="text-center">
+		<select style="margin-top: 10px;" ng-model="interet"
+			placeholder="selction"
+			ng-options="interet.unInteret for interet in interets">
+		</select>
+	</div>
 </div>
 <button class="btn btn-large btn-block btn-primary"
 	style="width: 10%; margin: auto; margin-top: 20px;"
 	ng-click="trouverGeeks()">Trouver l'amour!!</button>
-<div
-	style="margin: 20px 50px; border: solid 1px black; float: left; background-color: #F2F2F2; border-radius: 10px;">
-	<div
-		style="margin: auto; width: 400px; border-radius: 10px; padding: 10px;"
-		ng-repeat="geek in geeks">
-		<a ng-href="#/geek/{{geek.unIdGeek}}">{{ geek.unPrenom }} {{
-			geek.unNom }}</a>
+<center>
+	<div ng-show="geeks"
+		style="margin: 20px 50px; border: solid 1px black; float: center; background-color: #F2F2F2; border-radius: 10px;">
+		<div
+			style="margin: auto; width: 400px; border-radius: 10px; padding: 10px;"
+			ng-repeat="geek in geeks">
+
+			<img src="http://www.gravatar.com/avatar/{{geek.unTreeAvatar}}"
+				name="aboutme" width="140" height="140" border="0"
+				class="img-circle"></a>
+			<h3 class="media-heading">
+				<a ng-href="#/geek/{{geek.unIdGeek}}">{{ geek.unPrenom }} {{
+					geek.unNom }}</a>
+			</h3>
+			<span><strong>Centres d'interet:</strong></span> <span
+				ng-repeat="interet in geek.mesInterets"> <span
+				class="label label-info">{{interet.unInteret}}</span>
+			</span>
+
+
+
+		</div>
 	</div>
-</div>
+</center>
+
+
+
+
