Finalisation des pages hmtl pour la présentation

--- a/src/main/webapp/view/main.html
+++ b/src/main/webapp/view/main.html
@@ -1,10 +1,11 @@
 <div>
 	<h4 class="text-center">Je recherche :</h4>
 	<div class="text-center">
-		<input id="geek-radioM" ng-model="sexe" type="radio" name="radioSex" value="M"
-			checked="checked"><label for="geek-radioM">&nbsp;Un Geek </label><br> <input
-			id="geek-radioF" ng-model="sexe" type="radio" name="radioSex" value="F"><label for="geek-radioF">&nbsp;Une
-		Geeke </label><br>
+		<input id="geek-radioM" ng-model="sexe" type="radio" name="radioSex"
+			value="M" checked="checked"><label for="geek-radioM">&nbsp;Un
+			Geek </label><br> <input id="geek-radioF" ng-model="sexe" type="radio"
+			name="radioSex" value="F"><label for="geek-radioF">&nbsp;Une
+			Geeke </label><br>
 	</div>
 
 	<h4 class="text-center">qui apprecie...</h4>
@@ -36,13 +37,6 @@
 				ng-repeat="interet in geek.mesInterets"> <span
 				class="label label-info">{{interet.unInteret}}</span>
 			</span>
-
-
-
 		</div>
 	</div>
 </center>
-
-
-
-
